<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/layoutPadding"
    android:paddingBottom="@dimen/layoutPadding"
    android:paddingLeft="@dimen/layoutPadding"
    android:paddingRight="@dimen/layoutPadding"
    tools:context="mx.com.tormex.desarrollandounaaplicacion.desarrollandounaaplicacion.ConfirmarDatos">

    <TextView
        android:id="@+id/tvConfirmarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tvConfirmarDatos"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/layoutDatosContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top"
        android:layout_below="@id/tvConfirmarDatos">

        <TextView
            android:id="@+id/tvNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreCompleto"
            android:layout_marginBottom="@dimen/textViewPadding"
            android:textSize="@dimen/informacionContacto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:orientation="horizontal"

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaNacimiento"
                android:paddingRight="@dimen/textViewPadding"
                android:textSize="@dimen/informacionContacto" />
            <TextView
                android:id="@+id/tvFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvFechaNacimiento"
                android:layout_marginBottom="@dimen/textViewPadding"
                android:textSize="@dimen/informacionContacto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:orientation="horizontal"

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:paddingRight="@dimen/textViewPadding"
                android:textSize="@dimen/informacionContacto" />
            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTelefono"
                android:layout_marginBottom="@dimen/textViewPadding"
                android:textSize="@dimen/informacionContacto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:orientation="horizontal"

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:paddingRight="@dimen/textViewPadding"
                android:textSize="@dimen/informacionContacto" />


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEmail"
                android:layout_marginBottom="@dimen/textViewPadding"
                android:textSize="@dimen/informacionContacto" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:orientation="horizontal"

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:paddingRight="@dimen/textViewPadding"
                android:textSize="@dimen/informacionContacto" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvDescripcionContacto"
                android:textSize="@dimen/informacionContacto" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_width="@dimen/btnSize"
        android:layout_height="wrap_content"
        android:text="@string/btnEditarDatos"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/top"
        android:layout_below="@id/layoutDatosContacto"
        />

</RelativeLayout>
